--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,26 +51,26 @@
         <ul>
             <li class="myslides slide-1">
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
-                <div class="text">Software to connect companies for creating economic value</div>
+                <div class="text">Digitalisering van de processen om de juiste strategische keuzes te kunnen maken</div>
                 <div class="buttons">
-                    <a onclick="scrollToReason('profit')" class="btn-white-transparent-xl">Onze redenen</a><br />
-                    <a onclick="scrollToSolution('profit')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
+                    <a onclick="scrollToReason('why')" class="btn-white-transparent-xl">Onze redenen</a><br />
+                    <a onclick="scrollToSolution('why')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
                 </div>
             </li>
             <li class="myslides slide-2">
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
-                <div class="text">Software to connect companies for saving natural resources</div>
+                <div class="text">Wij bieden verschillende dienstverlening aan om jou op weg te helpen</div>
                 <div class="buttons">
-                    <a onclick="scrollToReason('planet')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
-                    <a onclick="scrollToSolution('planet')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
+                    <a onclick="scrollToReason('what')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
+                    <a onclick="scrollToSolution('what')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
                 </div>
             </li>
             <li class="myslides slide-3">
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
-                <div class="text">Software to connect companies for enabling communities</div>
+                <div class="text">Stretch your flex; Zet jij de juiste stappen? Is jouw bedrijf voldoende wendbaar?</div>
                 <div class="buttons">
-                    <a onclick="scrollToReason('people')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
-                    <a onclick="scrollToSolution('people')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
+                    <a onclick="scrollToReason('how')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
+                    <a onclick="scrollToSolution('how')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
                 </div>
             </li>
         </ul>
@@ -94,7 +94,7 @@
                 <a onclick="menuClick('#reasons')">Onze redenen</a>
             </li>
             <li class="menu-item menu-item-2">
-                <a onclick="menuClick('#solutions')">Onze oplossingen</a>
+                <a onclick="menuClick('#solutions')">Onze dienstverlening</a>
             </li>
             <li class="menu-item menu-items-3">
                 <a onclick="menuClick('#news')">Nieuws</a>
@@ -176,7 +176,7 @@
             </p>
             <p>
                 <span class="fa fa-phone"></span> <a class="link-light" href="tel:+31264452331"><span itemprop="telephone">+31 26 - 445 23 31</span></a><br />
-                <span class="fa fa-envelope"></span> <a class="link-light" href="mailto:curious@again.nl"><span itemprop="email">curious@again.nl</span></a>
+                <span class="fa fa-envelope"></span> <a class="link-light" href="mailto:info@lakran.com"><span itemprop="email">info@lakran.com</span></a>
             </p>
             <p>
                 Of vul ons contactformulier in:<br />
@@ -240,9 +240,9 @@ window.cookieconsent.initialise({
 },
 "theme": "edgeless",
 "content": {
-    "message": "This website uses cookies to ensure you get the best experience on our website. ",
-    "dismiss": "Got it!",
-    "link": "Learn more"
+    "message": "Deze websites maakt gebruik van cookies om te zorgen dat jij een optimale ervaring hebt. ",
+    "dismiss": "Oké!",
+    "link": "Lees meer"
 }
 })});
 </script>
