--- a/public/sass/_partials/_banner.scss
+++ b/public/sass/_partials/_banner.scss
@@ -19,19 +19,11 @@
 }
 
 .banner-1 {
-    background-image: url('http://localhost:3000/public/images/banner1.jpg');
+    background-image: url('https://lakranvms.azurewebsites.net/public/images/stretch.jpg');
     background-attachment: fixed;
 }
 
 .banner-2 {
-    // height: auto;
-    // margin: -100px 0;
-    // @media (max-width: 580px) {
-    //     margin: -100px 0;
-    // }
-    // @media (max-width: 415px) {
-    //     margin: -50px 0;
-    // }
-    background-image: url('http://localhost:3000/public/images/stretch.jpg');
+    background-image: url('https://lakranvms.azurewebsites.net/public/images/banner1.jpg');
     background-attachment: fixed;
 }
