--- a/public/sass/_partials/_hero-slider.scss
+++ b/public/sass/_partials/_hero-slider.scss
@@ -34,8 +34,8 @@
             font-family: $font-bold;
             padding: 8px 12px;
             position: absolute;
-            bottom: 18%;
-            width: 50%;
+            bottom: 35%;
+            width: 65%;
             text-align: right;
             @media (max-width: 768px) {
                 font-size: 2.4rem;
@@ -45,22 +45,38 @@
             }
         }
         .slide-1 {
-            background-image: url('http://localhost:3000/public/images/profit-overlay.jpg');
+            background-image: url('http://lakranvms.azurewebsites.net/public/images/why-overlay.jpg');
             .text {
-                @media (max-width: 575px) {
+                @media (max-width: 758px) {
                     bottom: 50%;
+                    width: 90%;
                     left: 5%;
-                    width: 80%;
                     text-align: left;
                 }
+                @media (max-width: 575px) {
+                    bottom: 45%;
+                    left: 5%;
+                    width: 80%;
+                }
                 @media (max-width: 470px) {
-                    bottom: 60%;
+                    bottom: 50%;
+                    width: 90%;
+                    left: 5%;
+                    text-align: center;
                 }
                 @media (max-width: 375px) {
-                    bottom: 55%;
-                    width: 95%;
-                    left: 3%;
-                    text-align: center;
+                    bottom: 40%;
+                }
+                // iPhone
+                @media (max-width: 375px) and (max-height: 667px) {
+                    bottom: 35%;
+                }
+                // iPhone plus
+                @media (max-width: 414px) and (max-height: 736px) {
+                    bottom: 40%;
+                }
+                @media (max-width: 350px) {
+                    display: none;
                 }
                 @media (max-width: 1000px) and (max-height: 550px) and (orientation: landscape) {
                     bottom: 18%;
@@ -77,19 +93,28 @@
             }
         }
         .slide-2 {
-            background-image: url('http://localhost:3000/public/images/planet-overlay.jpg');
+            background-image: url('https://lakranvms.azurewebsites.net/public/images/what-overlay.jpg');
             .text {
                 bottom: 60%;
                 right: 5%;
                 width: 60%;
+                @media (max-width: 550px) {
+
+                }
                 @media (max-width: 470px) {
-                    width: 70%;
+                    bottom: 50%;
+                    width: 90%;
+                    left: 5%;
+                    text-align: center;
                 }
                 @media (max-width: 375px) {
-                    bottom: 55%;
-                    width: 95%;
-                    left: 3%;
-                    text-align: center;
+                    bottom: 45%;
+                }
+                @media (max-width: 375px) and (max-height: 667px) {
+                    bottom: 35%;
+                }
+                @media (max-width: 350px) {
+                    display: none;
                 }
                 @media (max-width: 1000px) and (max-height: 550px) and (orientation: landscape) {
                     bottom: 18%;
@@ -106,12 +131,18 @@
             }
         }
         .slide-3 {
-            background-image: url('http://localhost:3000/public/images/people-overlay.jpg');
+            background-image: url('https://lakranvms.azurewebsites.net/public/images/how-overlay.jpg');
             .text {
                 bottom: 45%;
                 width: 65%;
                 left: 5%;
                 text-align: left;
+                @media (max-width: 758px) {
+                    bottom: 55%;
+                    width: 90%;
+                    left: 5%;
+                    text-align: right;
+                }
                 @media (max-width: 470px) {
                     bottom: 50%;
                     width: 95%;
@@ -119,7 +150,13 @@
                     text-align: center;
                 }
                 @media (max-width: 375px) {
-                    bottom: 55%;
+                    bottom: 50%;
+                }
+                @media (max-width: 375px) and (max-height: 667px) {
+                    bottom: 45%;
+                }
+                @media (max-width: 350px) {
+                    display: none;
                 }
                 @media (max-width: 1000px) and (max-height: 550px) and (orientation: landscape) {
                     bottom: 18%;
@@ -151,9 +188,12 @@
                 bottom: 20%;
                 transform: translateX(-50%);
             }
+            @media (max-width: 375px) and (max-height: 667px) {
+                bottom: 12%;
+            }
             .btn-white-transparent-xl,
             .btn-contrast-transparent-xl {
-                width: 200px;
+                width: 220px;
                 margin-bottom: 10px;
                 @media (max-width: 575px) {
                     padding: 10px 12px;
