--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,67 +4,60 @@
             <h2 class="section-title">Onze redenen</h2>
         </div>
         <div class="row all-reasons">
-            <div class="column profit" onclick="selectReason('profit')">
+            <div class="column why" onclick="selectReason('why')">
                 <div class="circle">
-                    {{!-- <img src="https://againtest.azurewebsites.net/public/images/profit-icon.png" alt="Profit Icon"> --}}
-                    {{!-- <svg id="profit-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 176.3 180.26"><defs></defs><path class="cls-1" d="M0 45.83h33.29V177.7H0zM51.6 0h33.29v177.7H51.6zM103.19 22.38h33.29V177.7h-33.29z"/><rect class="cls-2" x="394.23" y="225.96" width="27.26" height="105.73" rx="12.32" ry="12.32" transform="rotate(-47.94 110.804 519.656)"/><path class="cls-2" d="M342.69 167.36a49.76 49.76 0 1 0 52.25 47.15 49.77 49.77 0 0 0-52.25-47.15zm4.39 85.48A35.83 35.83 0 1 1 381 215.22a35.82 35.82 0 0 1-33.92 37.62z" transform="translate(-276.84 -141.02)"/></svg> --}}
                     <span class="fa fa-question-circle"></span>
                 </div>
                 <div class="block-title">
                     <h4>Why</h4>
                 </div>
             </div>
-            <div class="column planet" onclick="selectReason('planet')">
+            <div class="column how" onclick="selectReason('how')">
                 <div class="circle">
-                    {{!-- <img src="https://againtest.azurewebsites.net/public/images/planet-icon.png" alt="Planet Icon"> --}}
-                    <span class="fa fa-info-circle"></span>
-                </div>
-                <div class="block-title">
-                    <h4>What</h4>
-                </div>
-            </div>
-            <div class="column people" onclick="selectReason('people')">
-                <div class="circle">
-                    {{!-- <img src="https://againtest.azurewebsites.net/public/images/people-icon.png" alt="People Icon"> --}}
-                    {{!-- <svg id="people-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 272.24 281.5"><defs></defs><path class="cls-1" d="M528.74 354.43c-25.87-6.93-25.43-18.9-25.43-18.9l-.06-20.72s9.48-10.68 11.37-24.81c0 0 7.53-2.2 8.79-13.19s-3.77-11.93-3.77-11.93 17.14-51.18-16.39-67.82-48 4.4-48 4.4-25.74.63-22.92 35.16 5 28.26 5 28.26-7.54 4.27-3.14 15.17 7.22 9.64 7.22 9.64.94 14.76 11.93 25.43l-.63 22.29s-3.77 11.94-25.43 17.27-29.83 14.76-29.83 14.76 27 33 80.69 33c22.7-.03 50.6-48.01 50.6-48.01zM360 352.17c-9-3-13.8-6.47-16.36-9.42A104 104 0 0 0 371 335.5s-10-44.68-7-56.34l3-11.66s1-61.88-26.25-70.44c-33.53-16.64-48 4.4-48 4.4s-18 .44-22.24 20.76c-.38.71-14 26.5-10.52 43.76 3.5 17.5 9 64.5-3.5 69.5a262 262 0 0 0 31.25 6.19c-3.07 4-9.63 9.72-22.92 13 0 0 31.42 47.73 50.86 47.73 53.28 0 80.7-33 80.7-33A171.29 171.29 0 0 0 360 352.17zm-85.68-86.88a4.71 4.71 0 0 1 .58-.4c-.04.05-.25.58-.61.4z" transform="translate(-256.5 -154.16)"/><path class="cls-2" d="M35.63 235.94a223.56 223.56 0 0 1 47.56-22.54c27.88-9.43 25-21.73 25-21.73l.08-27.06s-12.38-13.94-14.84-32.39c0 0-9.84-2.87-11.48-17.22s4.92-15.58 4.92-15.58-22.37-66.83 21.41-88.58 62.65 5.74 62.65 5.74 37.9 1.38 29.93 45.92c-6 33.65-8.42 37.4-8.42 37.4s10 2.3 6 19.3c-3.15 13.37-9.43 12.59-9.43 12.59s-1.23 19.27-15.58 33.21l.82 29.11s4.92 15.58 33.21 22.55 38.95 19.26 38.95 19.26-35.26 43.65-105.37 43c-69.6-.52-105.41-42.98-105.41-42.98z" fill="#3c3c3b" stroke="#fff" stroke-miterlimit="10" stroke-width="5"/></svg> --}}
                     <span class="fa fa-cogs"></span>
                 </div>
                 <div class="block-title">
                     <h4>How</h4>
+                </div>
+            </div>
+            <div class="column what" onclick="selectReason('what')">
+                <div class="circle">
+                    <span class="fa fa-info-circle"></span>
+                </div>
+                <div class="block-title">
+                    <h4>What</h4>
                 </div>
             </div>
         </div>
         <div class="block-reasons">
-            <div class="block-reason profit">
+            <div class="block-reason why">
                  <div class="text-block">
                     <h4>Why</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+                    <p>De wereld om ons heen verandert steeds sneller. Dit geldt ook zeker voor de wereld van tijdelijke arbeid, ook wel flex genoemd. De arbeidsmarkt flexibiliseert in een razend tempo. Er ontstaat gebrek aan talent en technologische ontwikkelingen blijven toenemen. Alle bedrijven erkennen inmiddels dat, om bij te blijven met deze grote veranderingen, je niet meer zonder digitalisering van de bedrijfsprocessen kunt. Hierin geldt dat data “key” is om ook inzicht te krijgen in deze processen. Om te bepalen of je nog de juiste wendbaarheid hebt of dat je juist andere strategische stappen wilt gaan zetten. <br><br>
+                    Kortom <strong>“Stretch your flex”</strong></p>
                  </div>
                  <div class="icon-block">
-                    {{!-- <img src="https://againtest.azurewebsites.net/public/images/profit-icon.png" alt="Profit Icon"> --}}
                     <span class="fa fa-question-circle"></span>
                  </div>
                 <div class="image-block"></div>
             </div>
-            <div class="block-reason planet">
+            <div class="block-reason how">
                 <div class="text-block">
-                    <h4>What</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+                    <h4>How</h4>
+                    <p>Middels “Stretch your flex” gaan we op zoek naar de vraag achter de vraag. Voor welke veranderingen sta je de komende jaren en wat betekent dit voor nu en in de toekomst. We kijken graag samen met jou over de interne grenzen heen, om zo te komen tot een unieke creatieve oplossing die inzicht geeft. Een richting die tevens helpt in het verder maken van strategisch keuzes. Zeker voor de bedrijfsprocessen rondom inhuur geldt dat er altijd veel stakeholders bij betrokken zijn. Purchasing, HR en de operatie hebben allemaal haar eigen belang. Daarom extra belangrijk om alle partijen mee te nemen in een overall proces en dit met de juiste zorgvuldigheid en vanuit ieders perspectief te managen. Dit doen wij niet alleen. Wij maken hiervoor gebruik van verschillende partijen in de markt om zo te komen tot nuttige oplossingen. </p>
                 </div>
                 <div class="icon-block">
-                    {{!-- <img src="https://againtest.azurewebsites.net/public/images/planet-icon.png" alt="Planet Icon"> --}}
-                    <span class="fa fa-info-circle"></span>
+                    <span class="fa fa-cogs"></span>
                 </div>
                 <div class="image-block"></div>
             </div>
-            <div class="block-reason people">
+            <div class="block-reason what">
                 <div class="text-block">
-                    <h4>How</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+                    <h4>What</h4>
+                    <p>We bieden verschillende dienstverleningen aan, onderverdeeld in vier oplossingen. <br><br> <a onclick="menuClick('#solutions')" class="btn-primary">Bekijk ze hier</a></p>
                 </div>
                 <div class="icon-block">
-                    {{!-- <img src="https://againtest.azurewebsites.net/public/images/people-icon.png" alt="People Icon"> --}}
-                    <span class="fa fa-cogs"></span>
+                    <span class="fa fa-info-circle"></span>
                 </div>
                 <div class="image-block"></div>
             </div>
@@ -72,12 +65,16 @@
     </div>
 </section>
 
-<div class="banner banner-1"></div>
+<div class="banner banner-1">
+    <div class="banner-text">
+        <h2>Stretch your flex!</h2>
+    </div>
+</div>
 
 <section id="solutions">
     <div class="container">
         <div class="title-container">
-            <h2 class="section-title">Onze oplossingen</h2>
+            <h2 class="section-title">Onze dienstverlening</h2>
         </div>
         <div class="solution-blocks">
             <div class="solution-block strategy">
@@ -90,7 +87,7 @@
                 </div>
             </div>
             <div class="solution-block insights">
-                <h4 class="sol-title"><span class="fa fa-lightbulb"></span> Insights as a Service</h4>
+                <h4 class="sol-title"><span class="fa fa-lightbulb"></span> Flex insights as a Service</h4>
                 <div class="sol-text">
                     <ul>
                         <li>Data analyse van uw huidige tijdelijke arbeid</li>
@@ -121,25 +118,7 @@
     </div>
 </section>
 
-<div class="banner banner-2">
-    {{!-- <img src="./public/images/desktop.jpg" alt="Desktop Banner"> --}}
-    <div class="banner-text">
-        <h2>Stretch your flex!</h2>
-    </div>
-</div>
-
-<section id="news">
-    <div class="container">
-        <div class="title-container">
-            <h2 class="section-title">Nieuws</h2>
-        </div>
-        <div class="section-text">
-            <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
-            </p>
-        </div>
-    </div>
-</section>
+<div class="banner banner-2"></div>
 
 <section id="three-colums">
     <div class="container">
