--- a/public/sass/_partials/_banner.scss
+++ b/public/sass/_partials/_banner.scss
@@ -24,6 +24,6 @@
 }
 
 .banner-2 {
-    background-image: url('https://lakranvms.azurewebsites.net/public/images/banner1.jpg');
+    background-image: url('https://lakranvms.azurewebsites.net/public/images/desk.jpg');
     background-attachment: fixed;
 }
