--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -44,7 +44,8 @@
             <div class="block-reason how">
                 <div class="text-block">
                     <h4>How</h4>
-                    <p>Middels “Stretch your flex” gaan we op zoek naar de vraag achter de vraag. Voor welke veranderingen sta je de komende jaren en wat betekent dit voor nu en in de toekomst. We kijken graag samen met jou over de interne grenzen heen, om zo te komen tot een unieke creatieve oplossing die inzicht geeft. Een richting die tevens helpt in het verder maken van strategisch keuzes. Zeker voor de bedrijfsprocessen rondom inhuur geldt dat er altijd veel stakeholders bij betrokken zijn. Purchasing, HR en de operatie hebben allemaal haar eigen belang. Daarom extra belangrijk om alle partijen mee te nemen in een overall proces en dit met de juiste zorgvuldigheid en vanuit ieders perspectief te managen. Dit doen wij niet alleen. Wij maken hiervoor gebruik van verschillende partijen in de markt om zo te komen tot nuttige oplossingen. </p>
+                    <p>Middels “Stretch your flex” gaan we op zoek naar de vraag achter de vraag. Voor welke veranderingen sta je de komende jaren en wat betekent dit voor nu en in de toekomst. We kijken graag samen met jou over de interne grenzen heen, om zo te komen tot een unieke creatieve oplossing die inzicht geeft. Een richting die tevens helpt in het verder maken van strategisch keuzes. <br><br>
+                    Zeker voor inhuurprocessen geldt dat er altijd veel stakeholders bij betrokken zijn. Purchasing, HR en de operatie hebben allemaal haar eigen belang. Daarom extra belangrijk om alle partijen mee te nemen in een overall proces en dit met de juiste zorgvuldigheid en vanuit ieders perspectief te managen. Dit doen wij niet alleen. Wij maken hiervoor gebruik van verschillende partijen in de markt om zo te komen tot nuttige oplossingen. </p>
                 </div>
                 <div class="icon-block">
                     <span class="fa fa-cogs"></span>
@@ -99,9 +100,9 @@
                 <h4 class="sol-title"><span class="fa fa-puzzle-piece"></span> Solutioning as a Service</h4>
                 <div class="sol-text images">
                     <ul>
-                        <li>SAP Fieldglass</li>
-                        <li>Beeline</li>
-                        <li>Nétive</li>
+                        <li><a href="http://www.fieldglass.com/" target="_blank">SAP Fieldglass</a></li>
+                        <li><a href="https://www.beeline.com/" target="_blank">Beeline/IQN</a></li>
+                        <li><a href="https://www.netive.nl/" target="_blank">Nétive</a></li>
                     </ul>
                 </div>
             </div>
