--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,26 +51,26 @@
         <ul>
             <li class="myslides slide-1">
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
-                <div class="text">Digitalisering van de processen om de juiste strategische keuzes te kunnen maken</div>
+                <div class="text">Digitalisering van inhuurprocessen om de juiste strategische keuzes te kunnen maken</div>
                 <div class="buttons">
                     <a onclick="scrollToReason('why')" class="btn-white-transparent-xl">Onze redenen</a><br />
-                    <a onclick="scrollToSolution('why')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
+                    <a onclick="scrollToSolution('why')" href="#solutions" class="btn-white-transparent-xl">Onze dienstverlening</a>
                 </div>
             </li>
             <li class="myslides slide-2">
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
-                <div class="text">Wij bieden verschillende dienstverlening aan om jou op weg te helpen</div>
+                <div class="text">Wij bieden verschillende vormen dienstverlening aan om jou op weg te helpen</div>
                 <div class="buttons">
                     <a onclick="scrollToReason('what')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
-                    <a onclick="scrollToSolution('what')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
+                    <a onclick="scrollToSolution('what')" href="#solutions" class="btn-white-transparent-xl">Onze dienstverlening</a>
                 </div>
             </li>
             <li class="myslides slide-3">
                 <img class="logo" src="./public/images/lakran-vms-services-logo.png" alt="AGAIN Cloud Commerce Company">
-                <div class="text">Stretch your flex; Zet jij de juiste stappen? Is jouw bedrijf voldoende wendbaar?</div>
+                <div class="text">Stretch your flex; <br/> Zet jij de juiste stappen? <br/> Is jouw bedrijf voldoende wendbaar?</div>
                 <div class="buttons">
                     <a onclick="scrollToReason('how')" href="#reasons" class="btn-white-transparent-xl">Onze redenen</a><br />
-                    <a onclick="scrollToSolution('how')" href="#solutions" class="btn-white-transparent-xl">Onze oplossingen</a>
+                    <a onclick="scrollToSolution('how')" href="#solutions" class="btn-white-transparent-xl">Onze dienstverlening</a>
                 </div>
             </li>
         </ul>
@@ -96,16 +96,13 @@
             <li class="menu-item menu-item-2">
                 <a onclick="menuClick('#solutions')">Onze dienstverlening</a>
             </li>
-            <li class="menu-item menu-items-3">
-                <a onclick="menuClick('#news')">Nieuws</a>
-            </li>
-            <li class="menu-item menu-item-4">
+            <li class="menu-item menu-item-3">
                 <a onclick="menuClick('#technology')">Technologie</a>
             </li>
-            <li class="menu-item menu-item-5">
+            <li class="menu-item menu-item-4">
                 <a onclick="menuClick('#careers')">Vacatures</a>
             </li>
-            <li class="menu-item menu-item-6">
+            <li class="menu-item menu-item-5">
                 <a onclick="menuClick('#mailing')">Mailing list</a>
             </li>
         </ul>
