--- a/public/sass/_partials/_hero-slider.scss
+++ b/public/sass/_partials/_hero-slider.scss
@@ -34,142 +34,55 @@
             font-family: $font-bold;
             padding: 8px 12px;
             position: absolute;
-            bottom: 35%;
-            width: 65%;
             text-align: right;
-            @media (max-width: 768px) {
-                font-size: 2.4rem;
+            bottom: 60%;
+            right: 5%;
+            width: 70%;
+           
+            @media (max-width: 480px) {
+                display: none;
             }
-            @media (max-width: 470px) {
+            @media (max-width: 555px) {
+                bottom: 50%;
+            }
+             @media (max-width: 768px) {
                 font-size: 2rem;
             }
+            @media (max-width: 1150px) {
+                font-size: 2.3rem;
+            }
+
+            
+            @media (max-width: 1000px) and (max-height: 550px) and (orientation: landscape) {
+                bottom: 18%;
+                left: 3%;
+                width: 60%;
+                text-align: right;
+                font-size: 2.4rem;
+            }
+            @media (max-width: 785px) and (max-height: 375px) and (orientation: landscape) {
+                font-size: 2rem;
+                text-align: left;
+                bottom: 18%;
+            }
+            
         }
         .slide-1 {
             background-image: url('http://lakranvms.azurewebsites.net/public/images/why-overlay.jpg');
             .text {
-                @media (max-width: 758px) {
-                    bottom: 50%;
-                    width: 90%;
-                    left: 5%;
-                    text-align: left;
-                }
-                @media (max-width: 575px) {
-                    bottom: 45%;
-                    left: 5%;
-                    width: 80%;
-                }
-                @media (max-width: 470px) {
-                    bottom: 50%;
-                    width: 90%;
-                    left: 5%;
-                    text-align: center;
-                }
-                @media (max-width: 375px) {
-                    bottom: 40%;
-                }
-                // iPhone
-                @media (max-width: 375px) and (max-height: 667px) {
-                    bottom: 35%;
-                }
-                // iPhone plus
-                @media (max-width: 414px) and (max-height: 736px) {
-                    bottom: 40%;
-                }
-                @media (max-width: 350px) {
-                    display: none;
-                }
-                @media (max-width: 1000px) and (max-height: 550px) and (orientation: landscape) {
-                    bottom: 18%;
-                    left: 3%;
-                    width: 60%;
-                    text-align: right;
-                    font-size: 2.4rem;
-                }
-                @media (max-width: 785px) and (max-height: 375px) and (orientation: landscape) {
-                    font-size: 2rem;
-                    text-align: left;
-                    bottom: 18%;
-                }
+                text-align: left;
             }
         }
         .slide-2 {
-            background-image: url('https://lakranvms.azurewebsites.net/public/images/what-overlay.jpg');
+            background-image: url('http://lakranvms.azurewebsites.net/public/images/what-overlay.jpg');
             .text {
-                bottom: 60%;
-                right: 5%;
-                width: 60%;
-                @media (max-width: 550px) {
-
-                }
-                @media (max-width: 470px) {
-                    bottom: 50%;
-                    width: 90%;
-                    left: 5%;
-                    text-align: center;
-                }
-                @media (max-width: 375px) {
-                    bottom: 45%;
-                }
-                @media (max-width: 375px) and (max-height: 667px) {
-                    bottom: 35%;
-                }
-                @media (max-width: 350px) {
-                    display: none;
-                }
-                @media (max-width: 1000px) and (max-height: 550px) and (orientation: landscape) {
-                    bottom: 18%;
-                    left: 3%;
-                    width: 60%;
-                    text-align: right;
-                    font-size: 2.4rem;
-                }
-                @media (max-width: 785px) and (max-height: 375px) and (orientation: landscape) {
-                    font-size: 2rem;
-                    text-align: left;
-                    bottom: 18%;
-                }
+                text-align: right;
             }
         }
         .slide-3 {
-            background-image: url('https://lakranvms.azurewebsites.net/public/images/how-overlay.jpg');
+            background-image: url('http://lakranvms.azurewebsites.net/public/images/how-overlay.jpg');
             .text {
-                bottom: 45%;
-                width: 65%;
-                left: 5%;
                 text-align: left;
-                @media (max-width: 758px) {
-                    bottom: 55%;
-                    width: 90%;
-                    left: 5%;
-                    text-align: right;
-                }
-                @media (max-width: 470px) {
-                    bottom: 50%;
-                    width: 95%;
-                    left: 3%;
-                    text-align: center;
-                }
-                @media (max-width: 375px) {
-                    bottom: 50%;
-                }
-                @media (max-width: 375px) and (max-height: 667px) {
-                    bottom: 45%;
-                }
-                @media (max-width: 350px) {
-                    display: none;
-                }
-                @media (max-width: 1000px) and (max-height: 550px) and (orientation: landscape) {
-                    bottom: 18%;
-                    left: 3%;
-                    width: 60%;
-                    text-align: right;
-                    font-size: 2.4rem;
-                }
-                @media (max-width: 785px) and (max-height: 375px) and (orientation: landscape) {
-                    font-size: 2rem;
-                    text-align: left;
-                    bottom: 18%;
-                }
             }
         }
         .fade {
@@ -187,31 +100,39 @@
                 left: 50%;
                 bottom: 20%;
                 transform: translateX(-50%);
+                right: auto;
             }
+
             @media (max-width: 375px) and (max-height: 667px) {
                 bottom: 12%;
             }
             .btn-white-transparent-xl,
             .btn-contrast-transparent-xl {
-                width: 220px;
+                width: 270px;
                 margin-bottom: 10px;
                 @media (max-width: 575px) {
                     padding: 10px 12px;
                     font-size: 1.2rem;
-                    width: 175px;
+                    width: 230px;
                 }
                 @media (max-width: 375px) {
                     width: 100%;
+                    font-size: 0.95rem;
                 }
+
+                @media (max-width: 320px){
+                    width: 200px;
+                }
+
                 @media (max-width: 1000px) and (max-height: 550px) and (orientation: landscape) {
                     padding: 10px 12px;
                     font-size: 1.2rem;
-                    width: 175px;
+                    width: 230px;
                 }
                 @media (max-width: 785px) and (max-height: 375px) and (orientation: landscape) {
                     padding: 4px 8px;
                     font-size: 1rem;
-                    width: 150px;
+                    width: 205px;
                 }
             }
         }
