Added Google Analytics and uncommented recaptcha

--- a/public/sass/_partials/_banner.scss
+++ b/public/sass/_partials/_banner.scss
@@ -19,11 +19,11 @@
 }
 
 .banner-1 {
-    background-image: url('https://lakranvms.azurewebsites.net/public/images/stretch.jpg');
+    background-image: url('../images/stretch.jpg');
     background-attachment: fixed;
 }
 
 .banner-2 {
-    background-image: url('https://lakranvms.azurewebsites.net/public/images/desk.jpg');
+    background-image: url('../images/desk.jpg');
     background-attachment: fixed;
 }
