--- a/public/sass/_partials/_hero-slider.scss
+++ b/public/sass/_partials/_hero-slider.scss
@@ -68,19 +68,19 @@
             
         }
         .slide-1 {
-            background-image: url('http://lakranvms.azurewebsites.net/public/images/why-overlay.jpg');
+            background-image: url('../images/why-overlay.jpg');
             .text {
                 text-align: left;
             }
         }
         .slide-2 {
-            background-image: url('http://lakranvms.azurewebsites.net/public/images/what-overlay.jpg');
+            background-image: url('../images/what-overlay.jpg');
             .text {
                 text-align: right;
             }
         }
         .slide-3 {
-            background-image: url('http://lakranvms.azurewebsites.net/public/images/how-overlay.jpg');
+            background-image: url('../images/how-overlay.jpg');
             .text {
                 text-align: left;
             }
