--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -55,7 +55,7 @@
             <div class="block-reason what">
                 <div class="text-block">
                     <h4>What</h4>
-                    <p>We bieden verschillende dienstverleningen aan, onderverdeeld in vier oplossingen. <br><br> <a onclick="menuClick('#solutions')" class="btn-primary">Bekijk ze hier</a></p>
+                    <p>We bieden verschillende dienstverleningen aan, onderverdeeld in vier oplossingen. <br><br> <a onclick="buttonClick('#solutions')" class="btn-primary">Bekijk ze hier</a></p>
                 </div>
                 <div class="icon-block">
                     <span class="fa fa-info-circle"></span>
