--- a/public/sass/_partials/_banner.scss
+++ b/public/sass/_partials/_banner.scss
@@ -6,8 +6,11 @@
     background-size: cover;
     position: relative;
     background-attachment: fixed;
-    // Specific for iOS devices
-    @media (-webkit-overflow-scrolling: touch) {
+    //Specific for iOS devices
+    @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+        background-attachment: scroll;
+    }
+    @media only screen and (max-width: 768px) {
         background-attachment: scroll;
     }
     .banner-text {
