--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -145,29 +145,31 @@
                 <h4 class="column-title">Mailing list</h4>
                 <div class="column-text">
                     <p>Schrijf je in voor onze nieuwsbrief!</p>
-                    <!-- Begin MailChimp Signup Form -->
+                   <!-- Begin MailChimp Signup Form -->
                     <div id="mc_embed_signup">
-                        <form action="https://again.us8.list-manage.com/subscribe/post?u=53785b16e31b45f83200436f2&amp;id=4f03c9991a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <form action="https://lakranvmsservices.us8.list-manage.com/subscribe/post?u=53785b16e31b45f83200436f2&amp;id=4f03c9991a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                             <div id="mc_embed_signup_scroll">
-                                <div class="indicates-required">Velden met een <span class="asterisk">*</span> zijn vereist</div>
-                                <div class="mc-field-group">
-                                    <label for="mce-EMAIL">Email <span class="asterisk">*</span></label>
-                                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                                </div>
-                                <div class="mc-field-group">
-                                    <label for="mce-FNAME">Voornaam</label>
-                                    <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-                                </div>
-                                <div class="mc-field-group">
-                                    <label for="mce-LNAME">Achternaam</label>
-                                    <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-                                </div>
-                                <div id="mce-responses" class="clear">
-                                    <div class="response" id="mce-error-response" style="display:none"></div>
-                                    <div class="response" id="mce-success-response" style="display:none"></div>
-                                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_53785b16e31b45f83200436f2_4f03c9991a" tabindex="-1" value=""></div>
-                                <div class="clear"><input class="btn-primary" type="submit" value="Inschrijven" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                            <h2>Schrijf je in voor onze nieuwsbrief</h2>
+                        <div class="indicates-required">Velden met een <span class="asterisk">*</span> zijn vereist</div>
+                        <div class="mc-field-group">
+                            <label for="mce-EMAIL">Email <span class="asterisk">*</span>
+                        </label>
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                        </div>
+                        <div class="mc-field-group">
+                            <label for="mce-FNAME">Voornaam</label>
+                            <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+                        </div>
+                        <div class="mc-field-group">
+                            <label for="mce-LNAME">Achternaam</label>
+                            <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+                        </div>
+                            <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_53785b16e31b45f83200436f2_4f03c9991a" tabindex="-1" value=""></div>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                             </div>
                         </form>
                     </div>
