--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -92,7 +92,7 @@
                 <div class="sol-text">
                     <ul>
                         <li>Data analyse van uw huidige tijdelijke arbeid</li>
-                        <li>Dashboards m.b.t. diverse data van uw tijdelijke arbeid</li>
+                        <li>Dashboards m.b.t. diverse data van jou tijdelijke arbeid</li>
                     </ul>
                 </div>
             </div>
