Fixed a bug with page refresh and added contact form

--- a/public/sass/_partials/_base-styles.scss
+++ b/public/sass/_partials/_base-styles.scss
@@ -20,6 +20,11 @@ strong {
     font-family: $font-bold;
 }
 
+.flash.flash-success {
+    text-align: center;
+    color: $success;
+}
+
 .container {
     width: 60%;
     margin: 0 auto;
