--- a/public/sass/_partials/_variables.scss
+++ b/public/sass/_partials/_variables.scss
@@ -16,6 +16,8 @@ $grey: #868689;
 $dark-grey: #2b2b2b;
 $dark-grey-light: lighten($dark-grey, 15%);
 
+$success: #006922;
+
 // Numbers
 $hero-height: 91vh;
 $nav-height: 9vh;
