--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,106 +67,112 @@ strong {
 }
 
 /* line 23, ../sass/_partials/_base-styles.scss */
+.flash.flash-success {
+  text-align: center;
+  color: #006922;
+}
+
+/* line 28, ../sass/_partials/_base-styles.scss */
 .container {
   width: 60%;
   margin: 0 auto;
 }
 @media (max-width: 1100px) {
-  /* line 23, ../sass/_partials/_base-styles.scss */
+  /* line 28, ../sass/_partials/_base-styles.scss */
   .container {
     width: 65%;
   }
 }
 @media (max-width: 900px) {
-  /* line 23, ../sass/_partials/_base-styles.scss */
+  /* line 28, ../sass/_partials/_base-styles.scss */
   .container {
     width: 70%;
   }
 }
 @media (max-width: 768px) {
-  /* line 23, ../sass/_partials/_base-styles.scss */
+  /* line 28, ../sass/_partials/_base-styles.scss */
   .container {
     width: 85%;
   }
 }
 
-/* line 37, ../sass/_partials/_base-styles.scss */
+/* line 42, ../sass/_partials/_base-styles.scss */
 h1 {
   font-family: "ZwoOT-Xbold", Helvetica, Arial, sans-serif;
   font-size: 3rem;
 }
 
-/* line 41, ../sass/_partials/_base-styles.scss */
+/* line 46, ../sass/_partials/_base-styles.scss */
 h2 {
   font-family: "ZwoOT-Xbold", Helvetica, Arial, sans-serif;
   font-size: 2.5rem;
 }
 
-/* line 45, ../sass/_partials/_base-styles.scss */
+/* line 50, ../sass/_partials/_base-styles.scss */
 h3 {
   font-family: "ZwoOT-Xbold", Helvetica, Arial, sans-serif;
   font-size: 2rem;
 }
 
-/* line 49, ../sass/_partials/_base-styles.scss */
+/* line 54, ../sass/_partials/_base-styles.scss */
 h4 {
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
   font-size: 2rem;
 }
 
-/* line 53, ../sass/_partials/_base-styles.scss */
+/* line 58, ../sass/_partials/_base-styles.scss */
 h5 {
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
   font-size: 1.8rem;
 }
 
-/* line 57, ../sass/_partials/_base-styles.scss */
+/* line 62, ../sass/_partials/_base-styles.scss */
 h6 {
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
   font-size: 1.5rem;
 }
 
-/* line 62, ../sass/_partials/_base-styles.scss */
+/* line 67, ../sass/_partials/_base-styles.scss */
 a,
 a:visited {
   color: #2b2b2b;
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
 }
 
-/* line 68, ../sass/_partials/_base-styles.scss */
+/* line 73, ../sass/_partials/_base-styles.scss */
 a:hover,
 a:focus,
 a:active {
   color: #515151;
 }
 
-/* line 74, ../sass/_partials/_base-styles.scss */
+/* line 79, ../sass/_partials/_base-styles.scss */
 a.green-link,
 a.green-link:visited {
   color: #71519d;
 }
 
-/* line 79, ../sass/_partials/_base-styles.scss */
+/* line 84, ../sass/_partials/_base-styles.scss */
 a.green-link:focus,
 a.green-link:hover,
 a.green-link:active {
   color: #4d376b;
 }
 
-/* line 85, ../sass/_partials/_base-styles.scss */
+/* line 90, ../sass/_partials/_base-styles.scss */
 a.link-light,
 a.link-light:visited {
   color: #b288bc;
 }
 
-/* line 90, ../sass/_partials/_base-styles.scss */
+/* line 95, ../sass/_partials/_base-styles.scss */
 a.link-light:focus,
 a.link-light:hover,
 a.link-light:active {
   color: #91599e;
 }
 
-/* line 96, ../sass/_partials/_base-styles.scss */
+/* line 101, ../sass/_partials/_base-styles.scss */
 input, textarea {
   padding: 6px;
   border: 1px solid #c6c6c6;
@@ -174,12 +180,12 @@ input, textarea {
   margin: 6px 0 8px 0;
 }
 
-/* line 103, ../sass/_partials/_base-styles.scss */
+/* line 108, ../sass/_partials/_base-styles.scss */
 label {
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
 }
 
-/* line 107, ../sass/_partials/_base-styles.scss */
+/* line 112, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent, .btn-white-transparent-xl, .btn-contrast-transparent, .btn-contrast-transparent-xl, .btn-primary, .btn-primary-xl, .btn-dark-grey-xl, .btn-secondary, .btn-secondary-xl, .btn-dark-grey {
   display: inline-block;
   padding: 6px 12px;
@@ -200,134 +206,134 @@ label {
   text-decoration: none;
 }
 
-/* line 127, ../sass/_partials/_base-styles.scss */
+/* line 132, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent, .btn-white-transparent-xl {
   background-color: rgba(255, 255, 255, 0.6);
   border: 3px solid white;
   color: #2b2b2b;
 }
-/* line 132, ../sass/_partials/_base-styles.scss */
+/* line 137, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent:hover, .btn-white-transparent-xl:hover, .btn-white-transparent:focus, .btn-white-transparent-xl:focus, .btn-white-transparent:active, .btn-white-transparent-xl:active {
   background-color: rgba(255, 255, 255, 0.9);
 }
-/* line 137, ../sass/_partials/_base-styles.scss */
+/* line 142, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent:disabled, .btn-white-transparent-xl:disabled, .btn-white-transparent[disabled], [disabled].btn-white-transparent-xl {
   cursor: not-allowed;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
-/* line 144, ../sass/_partials/_base-styles.scss */
+/* line 149, ../sass/_partials/_base-styles.scss */
 .btn-white-transparent-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 150, ../sass/_partials/_base-styles.scss */
+/* line 155, ../sass/_partials/_base-styles.scss */
 .btn-contrast-transparent, .btn-contrast-transparent-xl {
   background-color: rgba(255, 255, 255, 0.6);
   border: 3px solid #ffd400;
   color: #2b2b2b;
 }
-/* line 155, ../sass/_partials/_base-styles.scss */
+/* line 160, ../sass/_partials/_base-styles.scss */
 .btn-contrast-transparent:hover, .btn-contrast-transparent-xl:hover, .btn-contrast-transparent:focus, .btn-contrast-transparent-xl:focus, .btn-contrast-transparent:active, .btn-contrast-transparent-xl:active {
   background-color: rgba(255, 255, 255, 0.9);
 }
-/* line 160, ../sass/_partials/_base-styles.scss */
+/* line 165, ../sass/_partials/_base-styles.scss */
 .btn-contrast-transparent:disabled, .btn-contrast-transparent-xl:disabled, .btn-contrast-transparent[disabled], [disabled].btn-contrast-transparent-xl {
   cursor: not-allowed;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
-/* line 167, ../sass/_partials/_base-styles.scss */
+/* line 172, ../sass/_partials/_base-styles.scss */
 .btn-contrast-transparent-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 173, ../sass/_partials/_base-styles.scss */
+/* line 178, ../sass/_partials/_base-styles.scss */
 .btn-primary, .btn-primary-xl, .btn-dark-grey-xl {
   background-color: #71519d;
   border: 1px solid #71519d;
   color: white;
 }
-/* line 178, ../sass/_partials/_base-styles.scss */
+/* line 183, ../sass/_partials/_base-styles.scss */
 .btn-primary:hover, .btn-primary-xl:hover, .btn-dark-grey-xl:hover, .btn-primary:focus, .btn-primary-xl:focus, .btn-dark-grey-xl:focus, .btn-primary:active, .btn-primary-xl:active, .btn-dark-grey-xl:active {
   background-color: #4d376b;
   border-color: #4d376b;
   color: white;
 }
-/* line 185, ../sass/_partials/_base-styles.scss */
+/* line 190, ../sass/_partials/_base-styles.scss */
 .btn-primary:disabled, .btn-primary-xl:disabled, .btn-dark-grey-xl:disabled, .btn-primary[disabled], [disabled].btn-primary-xl, [disabled].btn-dark-grey-xl {
   cursor: not-allowed;
   background-color: #987ebc;
   border-color: #987ebc;
 }
 
-/* line 193, ../sass/_partials/_base-styles.scss */
+/* line 198, ../sass/_partials/_base-styles.scss */
 .btn-primary-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 199, ../sass/_partials/_base-styles.scss */
+/* line 204, ../sass/_partials/_base-styles.scss */
 a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   color: white;
 }
 
-/* line 203, ../sass/_partials/_base-styles.scss */
+/* line 208, ../sass/_partials/_base-styles.scss */
 .btn-secondary, .btn-secondary-xl {
   background-color: #b288bc;
   border: 1px solid #b288bc;
   color: #2b2b2b;
 }
-/* line 208, ../sass/_partials/_base-styles.scss */
+/* line 213, ../sass/_partials/_base-styles.scss */
 .btn-secondary:hover, .btn-secondary-xl:hover, .btn-secondary:focus, .btn-secondary-xl:focus, .btn-secondary:active, .btn-secondary-xl:active {
   background-color: #91599e;
   border-color: #91599e;
 }
-/* line 214, ../sass/_partials/_base-styles.scss */
+/* line 219, ../sass/_partials/_base-styles.scss */
 .btn-secondary:disabled, .btn-secondary-xl:disabled, .btn-secondary[disabled], [disabled].btn-secondary-xl {
   cursor: not-allowed;
   background-color: #d2b9d8;
   border-color: #d2b9d8;
 }
 
-/* line 222, ../sass/_partials/_base-styles.scss */
+/* line 227, ../sass/_partials/_base-styles.scss */
 .btn-secondary-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 228, ../sass/_partials/_base-styles.scss */
+/* line 233, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey {
   background-color: #2b2b2b;
   border: 1px solid #2b2b2b;
   color: white;
 }
-/* line 233, ../sass/_partials/_base-styles.scss */
+/* line 238, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey:hover, .btn-dark-grey:focus, .btn-dark-grey:active {
   background-color: #515151;
 }
-/* line 238, ../sass/_partials/_base-styles.scss */
+/* line 243, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey:disabled, .btn-dark-grey[disabled] {
   cursor: not-allowed;
   background-color: rgba(43, 43, 43, 0.6);
 }
 
-/* line 245, ../sass/_partials/_base-styles.scss */
+/* line 250, ../sass/_partials/_base-styles.scss */
 .btn-dark-grey-xl {
   padding: 15px 20px;
   font-size: 1.4rem;
 }
 
-/* line 251, ../sass/_partials/_base-styles.scss */
+/* line 256, ../sass/_partials/_base-styles.scss */
 .row {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
   width: 100%;
 }
-/* line 256, ../sass/_partials/_base-styles.scss */
+/* line 261, ../sass/_partials/_base-styles.scss */
 .row .column {
   flex-basis: 0;
   flex-grow: 1;
@@ -335,12 +341,12 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   padding: 15px;
 }
 
-/* line 264, ../sass/_partials/_base-styles.scss */
+/* line 269, ../sass/_partials/_base-styles.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 268, ../sass/_partials/_base-styles.scss */
+/* line 273, ../sass/_partials/_base-styles.scss */
 .entire-width {
   width: 100%;
 }
@@ -638,7 +644,7 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   height: 9vh;
   float: left;
 }
-@media (max-width: 856px) {
+@media (max-width: 900px) {
   /* line 9, ../sass/_partials/_navbar.scss */
   #nav-bar .left-menu {
     width: 15%;
@@ -669,7 +675,7 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   height: 9vh;
   padding-right: 20px;
 }
-@media (max-width: 856px) {
+@media (max-width: 900px) {
   /* line 29, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu {
     width: 84%;
@@ -824,6 +830,13 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
     padding: 3vh 10px;
   }
 }
+@media (max-width: 790px) {
+  /* line 133, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .menu-items .menu-item a {
+    font-size: 0.9rem;
+    padding: 3vh 8px;
+  }
+}
 @media (max-width: 768px) {
   /* line 133, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu .menu-items .menu-item a {
@@ -832,7 +845,7 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   }
 }
 
-/* line 159, ../sass/_partials/_navbar.scss */
+/* line 163, ../sass/_partials/_navbar.scss */
 #nav-bar.sticky {
   position: fixed;
   top: 0;
@@ -840,7 +853,7 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   margin-bottom: 9vh;
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 159, ../sass/_partials/_navbar.scss */
+  /* line 163, ../sass/_partials/_navbar.scss */
   #nav-bar.sticky {
     margin-bottom: 14vh;
   }
@@ -1459,4 +1472,46 @@ section .title-container .section-title {
   color: #71519d;
   font-size: 4rem;
   margin-bottom: 15px;
+}
+
+/* line 2, ../sass/_partials/_form.scss */
+form .form-group {
+  width: 100%;
+  margin-bottom: 10px;
+}
+/* line 5, ../sass/_partials/_form.scss */
+form .form-group label {
+  width: 30%;
+  float: left;
+  padding-top: 6px;
+}
+@media (max-width: 475px) {
+  /* line 5, ../sass/_partials/_form.scss */
+  form .form-group label {
+    width: 100%;
+    float: none;
+  }
+}
+/* line 14, ../sass/_partials/_form.scss */
+form .form-group input, form .form-group textarea {
+  width: 70%;
+  margin: 0;
+}
+@media (max-width: 475px) {
+  /* line 14, ../sass/_partials/_form.scss */
+  form .form-group input, form .form-group textarea {
+    width: 100%;
+    margin-top: 5px;
+  }
+}
+@media (max-width: 475px) {
+  /* line 22, ../sass/_partials/_form.scss */
+  form .form-group input {
+    padding: 10px 6px;
+  }
+}
+
+/* line 30, ../sass/_partials/_form.scss */
+.anti-spam {
+  display: none;
 }
