--- a/public/sass/_partials/_navbar.scss
+++ b/public/sass/_partials/_navbar.scss
@@ -11,7 +11,7 @@
         padding: 8px 0 8px 35px;
         height: $nav-height;
         float: left;
-        @media (max-width: 856px) {
+        @media (max-width: 900px) {
             width: 15%;
         }
         @media (max-width: 768px) {
@@ -31,7 +31,7 @@
         width: 74%;
         height: $nav-height;
         padding-right: 20px;
-        @media (max-width: 856px) {
+        @media (max-width: 900px) {
             width: 84%;
         }
         @media (max-width: 768px) {
@@ -146,6 +146,10 @@
                     @media (max-width: 1070px) {
                         font-size: 1rem;
                         padding: 3vh 10px;
+                    }
+                    @media (max-width: 790px) {
+                        font-size: 0.9rem;
+                        padding: 3vh 8px;
                     }
                     @media(max-width: 768px) {
                         text-align: left;
