--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -7,4 +7,5 @@
 @import '_partials/banner';
 @import '_partials/footer';
 @import '_partials/modal';
+@import '_partials/demo';
 @import '_partials/form';
