--- a/public/css/style.css
+++ b/public/css/style.css
@@ -625,7 +625,8 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   }
 }
 /* line 1, ../sass/_partials/_navbar.scss */
-#nav-bar {
+#nav-bar,
+#simple-navbar {
   height: 9vh;
   background-color: #f5f5f5;
   z-index: 9999;
@@ -633,68 +634,79 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
   /* line 1, ../sass/_partials/_navbar.scss */
-  #nav-bar {
+  #nav-bar,
+  #simple-navbar {
     height: 14vh;
   }
 }
-/* line 9, ../sass/_partials/_navbar.scss */
-#nav-bar .left-menu {
+/* line 10, ../sass/_partials/_navbar.scss */
+#nav-bar .left-menu,
+#simple-navbar .left-menu {
   width: 25%;
   padding: 8px 0 8px 35px;
   height: 9vh;
   float: left;
 }
 @media (max-width: 900px) {
-  /* line 9, ../sass/_partials/_navbar.scss */
-  #nav-bar .left-menu {
+  /* line 10, ../sass/_partials/_navbar.scss */
+  #nav-bar .left-menu,
+  #simple-navbar .left-menu {
     width: 15%;
   }
 }
 @media (max-width: 768px) {
-  /* line 9, ../sass/_partials/_navbar.scss */
-  #nav-bar .left-menu {
+  /* line 10, ../sass/_partials/_navbar.scss */
+  #nav-bar .left-menu,
+  #simple-navbar .left-menu {
     width: 49%;
   }
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 9, ../sass/_partials/_navbar.scss */
-  #nav-bar .left-menu {
+  /* line 10, ../sass/_partials/_navbar.scss */
+  #nav-bar .left-menu,
+  #simple-navbar .left-menu {
     height: 14vh;
     padding: 4px 0 4px 35px;
   }
 }
-/* line 24, ../sass/_partials/_navbar.scss */
-#nav-bar .left-menu img {
+/* line 25, ../sass/_partials/_navbar.scss */
+#nav-bar .left-menu img,
+#simple-navbar .left-menu img {
   height: 100%;
   cursor: pointer;
 }
-/* line 29, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu {
+/* line 30, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu,
+#simple-navbar .right-menu {
   display: inline-block;
   width: 74%;
   height: 9vh;
   padding-right: 20px;
 }
 @media (max-width: 900px) {
-  /* line 29, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu {
+  /* line 30, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu,
+  #simple-navbar .right-menu {
     width: 84%;
   }
 }
 @media (max-width: 768px) {
-  /* line 29, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu {
+  /* line 30, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu,
+  #simple-navbar .right-menu {
     width: 49%;
   }
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 29, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu {
+  /* line 30, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu,
+  #simple-navbar .right-menu {
     height: 14vh;
   }
 }
-/* line 43, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .mobile-toggle {
+/* line 44, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .mobile-toggle,
+#simple-navbar .right-menu .mobile-toggle {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -702,13 +714,15 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   font-size: 1.4rem;
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 43, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu .mobile-toggle {
+  /* line 44, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .mobile-toggle,
+  #simple-navbar .right-menu .mobile-toggle {
     height: 14vh;
   }
 }
-/* line 52, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .mobile-toggle .nav-icon {
+/* line 53, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .mobile-toggle .nav-icon,
+#simple-navbar .right-menu .mobile-toggle .nav-icon {
   width: 40px;
   height: 25px;
   position: relative;
@@ -716,8 +730,9 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   transition: 0.5s ease-in-out;
   cursor: pointer;
 }
-/* line 59, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .mobile-toggle .nav-icon span {
+/* line 60, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .mobile-toggle .nav-icon span,
+#simple-navbar .right-menu .mobile-toggle .nav-icon span {
   display: block;
   position: absolute;
   height: 4px;
@@ -729,46 +744,54 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   transform: rotate(0deg);
   transition: .25s ease-in-out;
 }
-/* line 70, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .mobile-toggle .nav-icon span:nth-child(1) {
+/* line 71, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .mobile-toggle .nav-icon span:nth-child(1),
+#simple-navbar .right-menu .mobile-toggle .nav-icon span:nth-child(1) {
   top: 0px;
   transform-origin: left center;
 }
-/* line 74, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .mobile-toggle .nav-icon span:nth-child(2) {
+/* line 75, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .mobile-toggle .nav-icon span:nth-child(2),
+#simple-navbar .right-menu .mobile-toggle .nav-icon span:nth-child(2) {
   top: 10px;
   transform-origin: left center;
 }
-/* line 78, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .mobile-toggle .nav-icon span:nth-child(3) {
+/* line 79, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .mobile-toggle .nav-icon span:nth-child(3),
+#simple-navbar .right-menu .mobile-toggle .nav-icon span:nth-child(3) {
   top: 20px;
   transform-origin: left center;
 }
-/* line 85, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .mobile-toggle .nav-icon.open span:nth-child(1) {
+/* line 86, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .mobile-toggle .nav-icon.open span:nth-child(1),
+#simple-navbar .right-menu .mobile-toggle .nav-icon.open span:nth-child(1) {
   transform: rotate(45deg);
   top: -3px;
   left: 8px;
 }
-/* line 90, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .mobile-toggle .nav-icon.open span:nth-child(2) {
+/* line 91, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .mobile-toggle .nav-icon.open span:nth-child(2),
+#simple-navbar .right-menu .mobile-toggle .nav-icon.open span:nth-child(2) {
   width: 0%;
   opacity: 0;
 }
-/* line 94, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .mobile-toggle .nav-icon.open span:nth-child(3) {
+/* line 95, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .mobile-toggle .nav-icon.open span:nth-child(3),
+#simple-navbar .right-menu .mobile-toggle .nav-icon.open span:nth-child(3) {
   transform: rotate(-45deg);
   top: 26px;
   left: 8px;
 }
 @media (min-width: 769px) {
-  /* line 43, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu .mobile-toggle {
+  /* line 44, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .mobile-toggle,
+  #simple-navbar .right-menu .mobile-toggle {
     display: none;
   }
 }
-/* line 104, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .menu-items {
+/* line 105, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .menu-items,
+#simple-navbar .right-menu .menu-items {
   height: 9vh;
   margin: 0;
   display: flex;
@@ -779,8 +802,9 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   padding-left: 0;
 }
 @media (max-width: 768px) {
-  /* line 104, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu .menu-items {
+  /* line 105, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .menu-items,
+  #simple-navbar .right-menu .menu-items {
     position: absolute;
     background: #f5f5f5;
     flex-direction: column;
@@ -792,23 +816,27 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   }
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 104, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu .menu-items {
+  /* line 105, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .menu-items,
+  #simple-navbar .right-menu .menu-items {
     height: auto;
   }
 }
 @media (max-width: 768px) {
-  /* line 126, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu .menu-items .menu-item {
+  /* line 127, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .menu-items .menu-item,
+  #simple-navbar .right-menu .menu-items .menu-item {
     padding: 12px 35px 12px 0;
   }
-  /* line 129, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu .menu-items .menu-item:last-child {
+  /* line 130, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .menu-items .menu-item:last-child,
+  #simple-navbar .right-menu .menu-items .menu-item:last-child {
     padding-bottom: 16px;
   }
 }
-/* line 133, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .menu-items .menu-item a {
+/* line 134, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .menu-items .menu-item a,
+#simple-navbar .right-menu .menu-items .menu-item a {
   color: #2b2b2b;
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
   font-size: 1.2rem;
@@ -818,43 +846,67 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   text-align: center;
   cursor: pointer;
 }
-/* line 142, ../sass/_partials/_navbar.scss */
-#nav-bar .right-menu .menu-items .menu-item a:hover, #nav-bar .right-menu .menu-items .menu-item a:focus, #nav-bar .right-menu .menu-items .menu-item a:active {
+/* line 143, ../sass/_partials/_navbar.scss */
+#nav-bar .right-menu .menu-items .menu-item a:hover, #nav-bar .right-menu .menu-items .menu-item a:focus, #nav-bar .right-menu .menu-items .menu-item a:active,
+#simple-navbar .right-menu .menu-items .menu-item a:hover,
+#simple-navbar .right-menu .menu-items .menu-item a:focus,
+#simple-navbar .right-menu .menu-items .menu-item a:active {
   background: #ffd400;
   color: #2b2b2b;
 }
 @media (max-width: 1070px) {
-  /* line 133, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu .menu-items .menu-item a {
+  /* line 134, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .menu-items .menu-item a,
+  #simple-navbar .right-menu .menu-items .menu-item a {
     font-size: 1rem;
     padding: 3vh 10px;
   }
 }
 @media (max-width: 790px) {
-  /* line 133, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu .menu-items .menu-item a {
+  /* line 134, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .menu-items .menu-item a,
+  #simple-navbar .right-menu .menu-items .menu-item a {
     font-size: 0.9rem;
     padding: 3vh 8px;
   }
 }
 @media (max-width: 768px) {
-  /* line 133, ../sass/_partials/_navbar.scss */
-  #nav-bar .right-menu .menu-items .menu-item a {
+  /* line 134, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu .menu-items .menu-item a,
+  #simple-navbar .right-menu .menu-items .menu-item a {
     text-align: left;
     padding: 0;
   }
 }
 
-/* line 163, ../sass/_partials/_navbar.scss */
-#nav-bar.sticky {
+/* line 165, ../sass/_partials/_navbar.scss */
+#simple-navbar {
+  height: 4vh;
+}
+/* line 167, ../sass/_partials/_navbar.scss */
+#simple-navbar .left-menu {
+  width: 100%;
+  height: 4vh;
+  padding-top: 10px;
+}
+/* line 171, ../sass/_partials/_navbar.scss */
+#simple-navbar .left-menu a {
+  text-decoration: none;
+  padding-top: 10px;
+}
+
+/* line 178, ../sass/_partials/_navbar.scss */
+#nav-bar.sticky,
+#simple-navbar {
   position: fixed;
   top: 0;
   width: 100%;
   margin-bottom: 9vh;
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 163, ../sass/_partials/_navbar.scss */
-  #nav-bar.sticky {
+  /* line 178, ../sass/_partials/_navbar.scss */
+  #nav-bar.sticky,
+  #simple-navbar {
     margin-bottom: 14vh;
   }
 }
@@ -1472,6 +1524,28 @@ section .title-container .section-title {
   color: #71519d;
   font-size: 4rem;
   margin-bottom: 15px;
+}
+
+/* line 1, ../sass/_partials/_demo.scss */
+#demo {
+  margin-top: 4vh;
+  margin-bottom: 0;
+}
+/* line 4, ../sass/_partials/_demo.scss */
+#demo .iframe-container {
+  min-height: 96vh;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  overflow: hidden;
+}
+/* line 10, ../sass/_partials/_demo.scss */
+#demo .iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* line 2, ../sass/_partials/_form.scss */
