--- a/public/sass/_partials/_sections.scss
+++ b/public/sass/_partials/_sections.scss
@@ -235,6 +235,12 @@ section {
                 }
             }
         }
+        .insights {
+            a {
+                width: 100%;
+                color: white;
+            }
+        }
     }
 }
 
