--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -94,6 +94,7 @@
                         <li>Data analyse van uw huidige tijdelijke arbeid</li>
                         <li>Dashboards m.b.t. diverse data van jou tijdelijke arbeid</li>
                     </ul>
+                    <a href="/demo" class="btn-dark-grey-xl" target="_blank"><span class="fa fa-tachometer-alt"></span> Bekijk demo</a>
                 </div>
             </div>
             <div class="solution-block solutioning">
