Improved responsiveness new navbar

--- a/public/sass/_partials/_navbar.scss
+++ b/public/sass/_partials/_navbar.scss
@@ -173,6 +173,47 @@
             padding-top: 10px;
         }
     }
+    @media(max-height: 850px) {
+        height: 5vh;
+        .left-menu {
+            height: 5vh;
+            padding-top: 14px;
+        }
+    }
+    @media(max-height: 780px) {
+        .left-menu {
+            padding-top: 10px;
+        }
+    }
+    @media(max-height: 680px) {
+        height: 6vh;
+        .left-menu {
+            height: 6vh;
+            padding-top: 12px;
+        }
+    }
+    @media(max-height: 610px) {
+        height: 8vh;
+        .left-menu {
+            height: 8vh;
+            padding-top: 16px;
+        }
+    }
+    @media (max-height: 565px) {
+        .left-menu {
+            padding-top: 14px;
+        }
+    }
+    @media (max-height: 500px) {
+        .left-menu {
+            padding-top: 12px;
+        }
+    }
+    @media (max-height: 450px) {
+        .left-menu {
+            padding-top: 10px;
+        }
+    }
 }
 
 #nav-bar.sticky,
