--- a/public/css/style.css
+++ b/public/css/style.css
@@ -894,8 +894,65 @@ a.btn-primary, a.btn-primary-xl {
   text-decoration: none;
   padding-top: 10px;
 }
+@media (max-height: 850px) {
+  /* line 165, ../sass/_partials/_navbar.scss */
+  #simple-navbar {
+    height: 5vh;
+  }
+  /* line 178, ../sass/_partials/_navbar.scss */
+  #simple-navbar .left-menu {
+    height: 5vh;
+    padding-top: 14px;
+  }
+}
+@media (max-height: 780px) {
+  /* line 184, ../sass/_partials/_navbar.scss */
+  #simple-navbar .left-menu {
+    padding-top: 10px;
+  }
+}
+@media (max-height: 680px) {
+  /* line 165, ../sass/_partials/_navbar.scss */
+  #simple-navbar {
+    height: 6vh;
+  }
+  /* line 190, ../sass/_partials/_navbar.scss */
+  #simple-navbar .left-menu {
+    height: 6vh;
+    padding-top: 12px;
+  }
+}
+@media (max-height: 610px) {
+  /* line 165, ../sass/_partials/_navbar.scss */
+  #simple-navbar {
+    height: 8vh;
+  }
+  /* line 197, ../sass/_partials/_navbar.scss */
+  #simple-navbar .left-menu {
+    height: 8vh;
+    padding-top: 16px;
+  }
+}
+@media (max-height: 565px) {
+  /* line 203, ../sass/_partials/_navbar.scss */
+  #simple-navbar .left-menu {
+    padding-top: 14px;
+  }
+}
+@media (max-height: 500px) {
+  /* line 208, ../sass/_partials/_navbar.scss */
+  #simple-navbar .left-menu {
+    padding-top: 12px;
+  }
+}
+@media (max-height: 450px) {
+  /* line 213, ../sass/_partials/_navbar.scss */
+  #simple-navbar .left-menu {
+    padding-top: 10px;
+  }
+}
 
-/* line 178, ../sass/_partials/_navbar.scss */
+/* line 219, ../sass/_partials/_navbar.scss */
 #nav-bar.sticky,
 #simple-navbar {
   position: fixed;
@@ -904,7 +961,7 @@ a.btn-primary, a.btn-primary-xl {
   margin-bottom: 9vh;
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 178, ../sass/_partials/_navbar.scss */
+  /* line 219, ../sass/_partials/_navbar.scss */
   #nav-bar.sticky,
   #simple-navbar {
     margin-bottom: 14vh;
