--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1609,6 +1609,36 @@ section .title-container .section-title {
   width: 100%;
   height: 100%;
 }
+@media (max-height: 850px) {
+  /* line 1, ../sass/_partials/_demo.scss */
+  #demo {
+    margin-top: 5vh;
+  }
+  /* line 20, ../sass/_partials/_demo.scss */
+  #demo .iframe-container {
+    min-height: 95vh;
+  }
+}
+@media (max-height: 680px) {
+  /* line 1, ../sass/_partials/_demo.scss */
+  #demo {
+    margin-top: 6vh;
+  }
+  /* line 26, ../sass/_partials/_demo.scss */
+  #demo .iframe-container {
+    min-height: 94vh;
+  }
+}
+@media (max-height: 610px) {
+  /* line 1, ../sass/_partials/_demo.scss */
+  #demo {
+    margin-top: 8vh;
+  }
+  /* line 32, ../sass/_partials/_demo.scss */
+  #demo .iframe-container {
+    min-height: 92vh;
+  }
+}
 
 /* line 2, ../sass/_partials/_form.scss */
 form .form-group {
